Prevent logo from resizing
When using % instead of px, the logo gets squished on mobile devices

--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -7,7 +7,7 @@
 }
 
 .logo {
-  width: 10%;
+  width: 100px;
 }
 
 .items {
